samples/_failures_safe/1761633883_047d9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_29ff7f65.c: In function ‘main’:
./samples/SAFE/__tmp_29ff7f65.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
